# hulc-baseline

./: README.md  install.sh  pyproject.toml  requirements.txt  setup.py
conf/: config.yaml
conf/callbacks/: default.yaml
conf/callbacks/rollout/: default.yaml
conf/callbacks/rollout_lh/: default.yaml
conf/datamodule/: default.yaml
conf/datamodule/datasets/lang_dataset/: lang.yaml  lang_shm.yaml
conf/datamodule/datasets/vision_dataset/: vision.yaml  vision_shm.yaml
conf/inference/: config_inference.yaml
conf/logger/: wandb.yaml
conf/model/: gcbc.yaml  hulc.yaml  mcil.yaml
conf/trainer/: play_trainer.yaml
hulc/: training.py
hulc/datasets/: base_dataset.py  hulc_data_module.py  shm_dataset.py
hulc/datasets/utils/: shared_memory_utils.py
hulc/evaluation/: utils.py
hulc/models/: hulc.py
hulc/models/perceptual_encoders/vr/: embedding.py  utils.py
hulc/models/perceptual_encoders/vr/models/: filmed_net.py  layers.py
hulc/rollout/: rollout_long_horizon.py
