[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "True"
order_by_type = "False"

[tool.poetry]
name = "HULC"
version = "0.1.0"
description = ""
authors = ["Oier Mees <meeso@informatik.uni-freiburg.de>"]
readme = "README.md"
packages = [{include = "hulc"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
calvin-env = {path = "calvin_env_repo"}
cmake = "^3.25.2"
wheel = "^0.38.4"
numpy = ">1.2"
hydra-core = "1.1.1"
hydra-colorlog = "^1.2.0"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
omegaconf = "2.1.0"
plotly = "^5.13.1"
ftfy = "^6.1.1"
pyhash = "^0.9.3"
pytorch-lightning = "1.6.5"
torchvision = "^0.14.1"
gitpython = "^3.1.31"
scipy = "^1.10.1"
sentence-transformers = "^2.2.2"
gym = "^0.26.2"
moviepy = "^1.0.3"
tqdm = "^4.65.0"
termcolor = "^2.2.0"
wandb = "^0.13.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
